objects/ssot__HealthcareProviderSpecialty__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActiveResearchStudyCount__c</fullName>
        <label>Active Research Study Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CareSpecialtyId__c</fullName>
        <label>Care Specialty</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompletedResearchStudyCount__c</fullName>
        <label>Completed Research Study Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderId__c</fullName>
        <label>Healthcare Provider Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareSpecialty__c</fullName>
        <label>Healthcare Specialty Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Provider Specialty Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimarySpecialty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Specialty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__RoleType__c</fullName>
        <label>Role Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportedResearchStudyPhase__c</fullName>
        <label>Supported Research Study Phase</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SupportedResearchStudyType__c</fullName>
        <label>Supported Research Study Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725806637_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareProviderSpecialty_Healthca_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>HealthcareProviderSpecialty_Healthca_rel</relationshipLabel>
        <relationshipName>rel_1716725806637_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742275300379_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareProviderSpecialty_CareSpec_rel</label>
        <referenceTo>ssot__CareSpecialty__dlm</referenceTo>
        <relationshipLabel>HealthcareProviderSpecialty_CareSpec_rel</relationshipLabel>
        <relationshipName>rel_1742275300379_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>